<resources>
    <string name="Adobe_CSDK_IDS_PLEASE_WAIT">Please Wait…</string>
    <string name="Adobe_CSDK_action_settings">Settings</string>
    <string name="Free_Trial_sub_use_Yearly_sub_title">Yearly charge of %s will apply after trial period.</string>
    <string name="Free_Trial_sub_use_monthly">7-day Free Trial</string>
    <string name="Free_Trial_sub_use_monthly_sub_title">Monthly charge of %s will apply after trial period.</string>
    <string name="GDPR_AdMob_Privacy_policy_link">Admob Privacy Policy</string>
    <string name="GDPR_AdMob_check_popup_msg">We collect information about your previous search queries, activities, site or app visits, demographic information, and location through Google to serve ads optimized for individual users. If you do not consent to the provision and use of your personal information, you will only receive general ads that are not optimized for you. For more information, please refer to the Admob Privacy Policy.\n\nDo you agree to the provision and use of your personal information? It is possible to withdraw consent after giving consent.</string>
    <string name="GDPR_AdMob_check_popup_title">Consent to the provision and use of personal information for user-optimized advertisements.</string>
    <string name="GDPR_Fabric_Privacy_policy_link">\'Fabric Privacy Policy\'</string>
    <string name="GDPR_Firebase_Privacy_policy_link">\'FireBase Privacy Policy\'</string>
    <string name="GDPR_Firebase_check_popup_msg">We provide information such as IP addresses, device-specific information, and application usage events to third-party solutions such as Firebase, Flurry, and Fabric for quality control, determining minimum device requirements, compatibility and interoperability of KineMaster with other apps. The information provided will not be used for any purpose other than improving the quality of the app.\n\nSee the following links for detailed privacy policies below.\n\'FireBase Privacy Policy\'\n\'Flurry Privacy Policy\'\n\'Fabric Privacy Policy\'\n\nNot consenting to this data use will not restrict the use of this feature, however some features may be limited. You may withdraw your consent at any time.\n\nDo you agree to the provision and usage of your personal information?</string>
    <string name="GDPR_Firebase_check_popup_title">Consent to Provision and Use of User Information for App Quality Improvements</string>
    <string name="GDPR_Firebase_setting_uncheck_popup_msg">If you do not agree to the provision and use of your personal information, some features may be restricted.\n\n Do you still want to withdraw your consent?</string>
    <string name="GDPR_Firebase_uncheck_popup_msg">If you do not agree to the provision and use of your personal information, some features may be restricted.\n\nDo you not agree?</string>
    <string name="GDPR_Flurry_Privacy_policy_link">\'Flurry Privacy Policy\'</string>
    <string name="GDPR_Privacy_Policy_button">Submit</string>
    <string name="GDPR_Privacy_Policy_check_box_mag">I agree to the provision and use of this information.</string>
    <string name="GDPR_account_Privacy_policy_link">Privacy Policy</string>
    <string name="GDPR_account_check_popup_msg">We collect personal information, including your email address and name to create your KineMaster account.\n\nCollected email addresses and names are used for user identification, and can be used to transfer information such as app updates, new items etc. as needed.\n\nWe also collect device identifiers, item downlaods, and purchase information that occurs when you use KineMaster. Device identifiers are used for the purpose of limiting the number of available terminals for each user. Item download and purchase information is used for checking purchase details, refunding items, and redownloading items. The collected data will not be used in outside of the purposes mentioned above. Information is collected and used while the account is in use. . For more information, please refer to our Privacy Policy.\n\nIf you do not agree to these terms, you will not be able to create a user account. If you do not create a user account, you will be able to use the app as normal, however some features will be limited.\n\nDo you agree to the provision and use of your personal information to create an account?</string>
    <string name="GDPR_account_check_popup_title">Consent to Provision and Use of User Information for User Accounts</string>
    <string name="GDPR_account_uncheck_popup">You have been logged out due to not consenting to the provision and use of your personal information for your user account.</string>
    <string name="GDPR_account_update_popup_msg">Privacy Policy\n\nDo you agree with this updated information?</string>
    <string name="GDPR_account_update_popup_title">Agreement for the Provision and Use of Personal Information for User Accounts</string>
    <string name="IDS_COLLABORATOR_LEAVE_FOLDER_FAILURE_MESSAGE">Could Not Leave Folder</string>
    <string name="IDS_COLLABORATOR_LEAVE_FOLDER_SUCCESS_MESSAGE">Successfully Left Folder</string>
    <string name="IDS_LIBRARY_EDIT_CHOOSE">Choose %s</string>
    <string name="IDS_SAPPS_BODY_WAITING_ING">Waiting...</string>
    <string name="IDS_SAPPS_HEADER_ITEM_PURCHASED">Item purchased</string>
    <string name="button_cancel">Cancel</string>
    <string name="download_store_message">To purchase KineMaster Premium, you must have Google Play, Xiaomi Store or WeChat installed on your device</string>
    <string name="img_def_crop">Default Pan &amp; Zoom Mode for a Photo Clip</string>
    <string name="img_def_duration">Default Duration of a Photo Clip (in seconds)</string>
    <string name="img_def_duration_title">Default Duration of a Photo Clip</string>
    <string name="km3xbeta_firsttime_message_a">Thank you for participating in the ongoing KineMaster beta program. Your feedback and suggestions are extremely valuable and will help us continue to improve KineMaster.</string>
    <string name="km3xbeta_firsttime_message_b">As with any beta software, you may experience crashes or other errors.  In the event of a crash, if you see a report button, we encourage you to use it.</string>
    <string name="km3xbeta_firsttime_message_c">To opt-out of the beta program and return to the production version, please visit the App Testing page on Google Play using the Opt-In/Opt-Out button below.</string>
    <string name="km3xbeta_firsttime_message_d">A big thank-you in advance from the KineMaster team!</string>
    <string name="later">稍后再试</string>
    <string name="layer_def_duration">Default Duration of a Layer (in seconds)</string>
    <string name="layer_def_duration_title">Default Duration of a Layer</string>
    <string name="mediabrowser_catagory_all">All</string>
    <string name="mediabrowser_catagory_image">Image</string>
    <string name="mediabrowser_catagory_video">Video</string>
    <string name="pref_asms_android">Android</string>
    <string name="pref_asms_edition">ASMS Edition</string>
    <string name="pref_asms_product_server">Product Server</string>
    <string name="pref_asset_consumed">Consuming all purchased assets</string>
    <string name="pref_asset_dev_mode">Asset Developer Mode</string>
    <string name="pref_asset_env">Asset Environment</string>
    <string name="pref_asset_env_prod">Production</string>
    <string name="pref_asset_update_check">Asset Update Check</string>
    <string name="pref_audiobrowser_fullscreen">Audio browser full-screen mode</string>
    <string name="pref_audiobrowser_fullscreen_off">OFF: The audio browser appears above the timeline.</string>
    <string name="pref_audiobrowser_fullscreen_on">ON: The audio browser fills the screen.</string>
    <string name="pref_change_asset_scope">Asset Scope</string>
    <string name="pref_data_usage">How would you like KineMaster to check for updates?</string>
    <string name="pref_data_usage_title">Automatic Updates</string>
    <string name="pref_disable_iab_mcc_checker">Disable InApp Billing mcc checker</string>
    <string name="pref_exp_advanced">Advanced and Experimental Settings</string>
    <string name="pref_information_about_account">My Information</string>
    <string name="pref_information_about_kinemaster">About KineMaster</string>
    <string name="pref_information_category_sorting">Sorting</string>
    <string name="pref_information_category_title">Information</string>
    <string name="pref_information_device_capability">Device Capability Information</string>
    <string name="pref_information_sorting_projectlist">Sort project list by</string>
    <string name="pref_logo_edit">Enable editing of KineMaster logo clip</string>
    <string name="pref_logo_edit_off">Disabled: The logo clip cannot be moved or deleted.</string>
    <string name="pref_logo_edit_on">Enabled: You can long-press to move or delete the logo clip that is automatically added at the end of each project.</string>
    <string name="pref_mediabrowser_fullscreen">Media browser full-screen mode</string>
    <string name="pref_mediabrowser_fullscreen_off">OFF: The media browser appears above the timeline.</string>
    <string name="pref_mediabrowser_fullscreen_on">ON: The media browser fills the screen.</string>
    <string name="pref_mobile_update">Check for Updates using Mobile Network</string>
    <string name="pref_mobile_update_off">KineMaster will only check for updates using Wi-Fi.  Available updates are only downloaded upon user request.</string>
    <string name="pref_mobile_update_on">KineMaster will check for updates using Wi-Fi or mobile networks.  Available updates are only downloaded upon user request.</string>
    <string name="pref_more_resolutions">Exporting Options</string>
    <string name="pref_more_resolutions_off">Only recommended exporting options will be shown</string>
    <string name="pref_more_resolutions_on">Show additional options for exporting (on supported devices only)</string>
    <string name="pref_remote_config">Change Subscrtiption Remote Config</string>
    <string name="pref_section_advanced">Advanced</string>
    <string name="pref_section_dev">Developer Options - Use with caution!</string>
    <string name="pref_section_edit">Editing</string>
    <string name="pref_section_export">Export</string>
    <string name="pref_section_network_usage">Network Usage</string>
    <string name="pref_section_sdcard_select">Export and Converted Files Location</string>
    <string name="pref_send_app_usage_option">Send anonymous usage data</string>
    <string name="pref_send_app_usage_option_off">No usage data will be sent.</string>
    <string name="pref_send_app_usage_option_on">Anonymous application usage data will be sent to help improve KineMaster.</string>
    <string name="pref_server_url">Change Server URL</string>
    <string name="pref_set_special_price_notification_time">Set Special price notification time</string>
    <string name="pref_show_demo_content_only">Show Demo Content Only</string>
    <string name="pref_show_timeline_content_weight">Show content weight on timeline</string>
    <string name="pref_sorting_value_date_edit">Date Modified</string>
    <string name="savefiles_audio_title">Recorded Audio Location</string>
    <string name="savefiles_capture_title">Frame Capture Location</string>
    <string name="savefiles_image_title">Photos Location</string>
    <string name="savefiles_title">File Locations</string>
    <string name="savefiles_video_title">Recorded Video Location</string>
    <string name="settings_Privacy_Policy_manage">Privacy Policy Management</string>
    <string name="share">分享</string>
    <string name="sub_removes_limitations">Removes All Watermarks and Limitations</string>
    <string name="sub_unlock_pro_edition">Unlock KineMaster Premium</string>
    <string name="wechat_share_event_extra_message">( 活动仅限参与1次，不可重复参与, 活动截止日期至2016年10月9日)</string>
    <string name="wechat_share_event_title">微信分享~ 免费升级巧影全功去水印能版！</string>
</resources>