<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_information_category_title">
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_information_about_account"
            android:key="pref_information_about_account"/>
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_information_about_kinemaster"
            android:key="pref_information_about_kinemaster"/>
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_information_device_capability"
            android:key="pref_information_device_capability"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_Privacy_Policy_manage">
        <com.nexstreaming.app.general.preferences.NexButtonPreference
            android:persistent="true"
            android:title="@string/GDPR_Firebase_check_popup_title"
            android:key="pref_gdpr_echosystem"
            android:defaultValue="false"/>
        <com.nexstreaming.app.general.preferences.NexButtonPreference
            android:persistent="true"
            android:title="@string/GDPR_AdMob_check_popup_title"
            android:key="pref_gdpr_ads"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_section_network_usage">
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_mobile_update"
            android:key="mobile_updates"
            android:defaultValue="true"
            android:summaryOn="@string/pref_mobile_update_on"
            android:summaryOff="@string/pref_mobile_update_off"/>
        <ListPreference
            android:persistent="true"
            android:entries="@array/data_usage_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_data_usage_title"
            android:key="data_usage"
            android:defaultValue="mobile"
            android:dialogTitle="@string/pref_data_usage"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/data_usage_values"/>
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_send_app_usage_option"
            android:key="report_anon_usage"
            android:defaultValue="false"
            android:summaryOn="@string/pref_send_app_usage_option_on"
            android:summaryOff="@string/pref_send_app_usage_option_off"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_section_export">
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_section_sdcard_select"
            android:key="select_sdcard"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_section_edit">
        <ListPreference
            android:persistent="true"
            android:entries="@array/img_duration_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/img_def_duration_title"
            android:key="add_img_def_duration"
            android:defaultValue="4500"
            android:dialogTitle="@string/img_def_duration"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/img_duration_values"/>
        <ListPreference
            android:persistent="true"
            android:entries="@array/img_crop_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/img_def_crop"
            android:key="add_img_def_crop"
            android:defaultValue="none"
            android:dialogTitle="@string/img_def_crop"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/img_crop_values"/>
        <ListPreference
            android:persistent="true"
            android:entries="@array/layer_duration_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/layer_def_duration_title"
            android:key="add_layer_def_duration"
            android:defaultValue="4500"
            android:dialogTitle="@string/layer_def_duration"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/layer_duration_values"/>
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_mediabrowser_fullscreen"
            android:key="pref_mbrowser_full"
            android:defaultValue="false"
            android:summaryOn="@string/pref_mediabrowser_fullscreen_on"
            android:summaryOff="@string/pref_mediabrowser_fullscreen_off"/>
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_audiobrowser_fullscreen"
            android:key="pref_abrowser_full"
            android:defaultValue="false"
            android:summaryOn="@string/pref_audiobrowser_fullscreen_on"
            android:summaryOff="@string/pref_audiobrowser_fullscreen_off"/>
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_logo_edit"
            android:key="pref_logo_edit"
            android:defaultValue="false"
            android:summaryOn="@string/pref_logo_edit_on"
            android:summaryOff="@string/pref_logo_edit_off"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_information_category_sorting">
        <ListPreference
            android:persistent="true"
            android:entries="@array/sorting_project_list_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_information_sorting_projectlist"
            android:key="sorting_project"
            android:summary="@string/pref_sorting_value_date_edit"
            android:defaultValue="edit"
            android:dialogTitle="@string/pref_information_sorting_projectlist"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/sorting_project_list_value"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/savefiles_title">
        <ListPreference
            android:persistent="true"
            android:entries="@array/savefiles_loc_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/savefiles_audio_title"
            android:key="savefiles_audio"
            android:summary="@string/savefiles_audio_title"
            android:defaultValue="km"
            android:dialogTitle="@string/savefiles_audio_title"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/savefiles_loc_value"/>
        <ListPreference
            android:persistent="true"
            android:entries="@array/savefiles_loc_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/savefiles_video_title"
            android:key="savefiles_video"
            android:summary="@string/savefiles_video_title"
            android:defaultValue="km"
            android:dialogTitle="@string/savefiles_video_title"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/savefiles_loc_value"/>
        <ListPreference
            android:persistent="true"
            android:entries="@array/savefiles_loc_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/savefiles_image_title"
            android:key="savefiles_image"
            android:summary="@string/savefiles_image_title"
            android:defaultValue="km"
            android:dialogTitle="@string/savefiles_image_title"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/savefiles_loc_value"/>
        <ListPreference
            android:persistent="true"
            android:entries="@array/savefiles_loc_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/savefiles_capture_title"
            android:key="savefiles_capture"
            android:summary="@string/savefiles_capture_title"
            android:defaultValue="km"
            android:dialogTitle="@string/savefiles_capture_title"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/savefiles_loc_value"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_section_advanced">
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_exp_advanced"
            android:key="pref_exp_advanced"/>
    </PreferenceCategory>
</PreferenceScreen>
