<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_section_dev">
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_asset_consumed"
            android:key="asset_consumed"/>
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="Run Codec Capability Check"
            android:key="codec_capa_check"/>
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="Edit Codec Limits"
            android:key="codec_limits"/>
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_more_resolutions"
            android:key="export_extras"
            android:defaultValue="false"
            android:summaryOn="@string/pref_more_resolutions_on"
            android:summaryOff="@string/pref_more_resolutions_off"/>
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_show_timeline_content_weight"
            android:key="show_timeline_content_weight"
            android:defaultValue="false"
            android:summaryOn="ON"
            android:summaryOff="OFF"/>
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_show_demo_content_only"
            android:key="show_demo_content_only"
            android:defaultValue="false"
            android:summaryOn="ON"
            android:summaryOff="OFF"/>
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_asset_dev_mode"
            android:key="asset_dev_mode"
            android:defaultValue="false"
            android:summaryOn="ON"
            android:summaryOff="OFF"/>
        <ListPreference
            android:persistent="true"
            android:entries="@array/asset_env_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_asset_env"
            android:key="asset_env"
            android:summary="@string/pref_asset_env_prod"
            android:defaultValue="production"
            android:dialogTitle="@string/pref_asset_env"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/asset_env_values"/>
        <ListPreference
            android:persistent="true"
            android:entries="@array/asms_server_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_server_url"
            android:key="asms_server_url"
            android:summary="@string/pref_asms_product_server"
            android:defaultValue="https://api-kinemaster-assetstore.nexstreaming.com"
            android:dialogTitle="@string/pref_server_url"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/asms_server_values"/>
        <ListPreference
            android:persistent="true"
            android:entries="@array/asms_edition_items"
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_asms_edition"
            android:key="asms_edition"
            android:summary="@string/pref_asms_android"
            android:dialogTitle="@string/pref_asms_edition"
            android:negativeButtonText="@string/button_cancel"
            android:entryValues="@array/asms_edition_values"/>
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_change_asset_scope"
            android:key="asset_level"/>
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_asset_update_check"
            android:key="asset_update_check_always"
            android:defaultValue="false"
            android:summaryOn="Always"
            android:summaryOff="Once per 24h"/>
        <com.nexstreaming.app.general.preferences.NexSwitchPreference
            android:persistent="true"
            android:title="@string/pref_disable_iab_mcc_checker"
            android:key="disable_iab_mcc_checker"
            android:defaultValue="false"
            android:summaryOn="ON"
            android:summaryOff="OFF"/>
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_set_special_price_notification_time"
            android:key="@string/pref_set_special_price_notification_time"/>
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="Diagnostic Information"
            android:key="diagnostic_info"/>
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="Set Test Name"
            android:key="set_test_name"/>
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="Import Device Capability Profile"
            android:key="import_device_profile"/>
        <Preference
            android:layout="@layout/layout_preference_list_item"
            android:title="@string/pref_remote_config"
            android:key="remote_config"/>
    </PreferenceCategory>
</PreferenceScreen>
