<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/subscription_title_text_size"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sub_unlock_pro_edition"/>
    <TextView
        android:textSize="@dimen/subscription_subtitle_text_size"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_removes_limitations"/>
    <TextView
        android:textSize="@dimen/subscription_subtitle_text_size"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_subscribe_info_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_store_message"/>
</LinearLayout>
