<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="match_parent">
    <TextView
        android:textSize="16dp"
        android:textColor="@color/dialog_text"
        android:paddingLeft="20dp"
        android:paddingTop="3dp"
        android:paddingRight="20dp"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome!"/>
    <View
        android:background="@color/km_red"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <TextView
        android:textSize="12dp"
        android:textColor="@color/dialog_text"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/km3xbeta_firsttime_message_a"/>
    <TextView
        android:textSize="12dp"
        android:textColor="@color/dialog_text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/km3xbeta_firsttime_message_b"/>
    <TextView
        android:textSize="12dp"
        android:textColor="@color/dialog_text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/km3xbeta_firsttime_message_c"/>
    <TextView
        android:textSize="12dp"
        android:textColor="@color/dialog_text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/km3xbeta_firsttime_message_d"
        android:lineSpacingMultiplier="0.9"/>
    <TextView
        android:textSize="12dp"
        android:textColor="@color/km_red"
        android:gravity="center_horizontal"
        android:id="@+id/beta_expiration"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"/>
</LinearLayout>
