<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/share_event_background"
            android:scaleType="centerCrop"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/logo_kinemaster_cn"/>
        <TextView
            android:textSize="25dp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wechat_share_event_title"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textSize="16dp"
            android:gravity="center"
            android:id="@+id/tv_fragment_share_event_message"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="12dp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:id="@+id/tv_fragment_share_event_extra_message"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wechat_share_event_extra_message"/>
        <Button
            android:textSize="22dp"
            android:textColor="@android:color/white"
            android:id="@+id/btn_fragment_share_event_share"
            android:background="@drawable/selector_pink_background_button"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/share"/>
        <TextView
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#c1c2c3"
            android:id="@+id/tv_fragment_share_event_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/later"/>
    </LinearLayout>
</LinearLayout>
